--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <main>
-        <a href="resume.pdf"></a>
+        <h1>My First Resume</h1>
+        <object 
+            type="application/pdf"
+            data="resume.pdf"
+            width="90%"
+            height="800"
+        >
+        </object>
     </main>
 </body>
 </html>
