--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
 <body>
     <main>
         <h1>My First Resume</h1>
-        <object 
-            type="application/pdf"
-            data="resume.pdf"
-            width="90%"
-            height="800"
-        >
-        </object>
+        <embed type="application/pdf" src="resume.pdf">
     </main>
 </body>
 </html>
