--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <h1>My First Resume</h1>
-        <embed type="application/pdf" src="resume.pdf">
+        <embed type="application/x-google-chrome-pdf" src="Resume.pdf">
     </main>
 </body>
 </html>
