--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <main>
-        <h1>My First Resume</h1>
-        <embed type="application/x-google-chrome-pdf" src="Resume.pdf">
+        <p>Hi my name Justin</p>
     </main>
 </body>
 </html>
